dfir_rs/tests/compile-fail/nightly/surface_syntax_paren_semicolon.stderr
error: unexpected token, expected `)`
 --> tests/compile-fail/nightly/surface_syntax_paren_semicolon.rs:5:28
  |
5 |         (source_iter(0..10););
  |                            ^
